force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>청구 금액</description>
    <label>청구 금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>