force-app/main/default/objects/Invoice__c/fields/Billing_Month__c.field-meta.xml
<CustomField>
    <fullName>Billing_Month__c</fullName>
    <description>청구 기준월</description>
    <label>청구월</label>
    <type>Date</type>
</CustomField>