force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>납부 기한</description>
    <label>납부 기한</label>
    <type>Date</type>
</CustomField>