force-app/main/default/objects/Invoice__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>실제 납부일</description>
    <inlineHelpText>(선택) 실제 고객이 납부를 완료한 날짜</inlineHelpText>
    <label>납부일</label>
    <type>Date</type>
</CustomField>