force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>청구 상태</description>
    <inlineHelpText>(선택) 청구서의 납부 상태</inlineHelpText>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미납 (Unpaid)</fullName>
                <default>true</default>
                <label>미납 (Unpaid)</label>
            </value>
            <value>
                <fullName>납부완료 (Paid)</fullName>
            </value>
            <value>
                <fullName>연체 (Overdue)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>